# fastapi-example

./: .coverage  .env  .gitignore  README.md  log.ini  logger.py  main.py  noxfile.py  pyproject.toml  requirements.txt
src/: app.py
src/controllers/: item_controller.py  user_controller.py
src/database/: database_context.py
src/database/models/: models.py
src/database/schemas/: schemas.py
src/services/: item_service.py  user_service.py
tests/: test_app.py
tests/unit/: test_app.py
tests/unit/controller/: test_user_controller.py
